--- a/css/task1-05.css
+++ b/css/task1-05.css
@@ -11,14 +11,11 @@ header{
 	background-color:#282828;
 	height:80px;
 	margin: 0px;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
 }
 
 	header h1{
 		margin-left: 20px;
+		color: white;
 	}
 
 	header h1,
@@ -45,16 +42,13 @@ header{
 		color: #A0A0A0;
 	}
 
-main{
-	position: relative;
-	overflow: hidden;
-	top: 80px;
-}
 
 article{
 	background:#FFF;
 	margin: 20px;
 	padding: 20px;
+	margin-right: 480px;
+	overflow: auto;
 }
 
 	article .title2{
@@ -79,6 +73,7 @@ article{
 			padding: 10px;
 			width: 110px;
 			font-size: 50%;
+			display: inline-block;
 		}
 
 		article #list2 li img{
@@ -111,9 +106,10 @@ article{
 
 aside{
 	background:#FFF;
-	margin: 20px;
 	padding: 20px;
+	margin: 0px 20px;
 	float: right;
+	width: 400px;
 }
 	aside h2{
 		border-left: 3px solid;
@@ -121,6 +117,7 @@ aside{
 		height: 10x;
 		padding: 10px;
 		font-size: 20px;
+		margin: 0px;
 	}
 
 	aside div,
@@ -142,6 +139,11 @@ aside{
 		color: #A0A0A0;
 	}
 
+	aside section textarea{
+		width: 200px;
+		height: 150px;
+	}
+
 	aside #submit{
         width: 100%;
         height: 40px;
@@ -155,12 +157,6 @@ aside{
 footer{
 	background-color: black;
 	color: white;
-	height: 80px;
-	margin: 0px;
-	padding: 30px;
+	padding: 20px;
 	text-align: center;
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
-	width: 100%;
 }
